tests/ecc-aws-226-eks_clusters_security_group_traffic_restricted/placebo-green/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200,
    "data": {
        "SecurityGroups": [
            {
                "Description": "Managed by Terraform",
                "GroupName": "226_security_group_green",
                "IpPermissions": [
                    {
                        "FromPort": 10250,
                        "IpProtocol": "tcp",
                        "IpRanges": [],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 10250,
                        "UserIdGroupPairs": [
                            {
                                "GroupId": "sg-1234567asdfg",
                                "UserId": "111111111111"
                            }
                        ]
                    },
                    {
                        "FromPort": 443,
                        "IpProtocol": "tcp",
                        "IpRanges": [],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 443,
                        "UserIdGroupPairs": [
                            {
                                "GroupId": "sg-1234567asdfg",
                                "UserId": "111111111111"
                            }
                        ]
                    }
                ],
                "OwnerId": "111111111111",
                "GroupId": "sg-1234567asdfg",
                "IpPermissionsEgress": [
                    {
                        "FromPort": 10250,
                        "IpProtocol": "tcp",
                        "IpRanges": [],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 10250,
                        "UserIdGroupPairs": [
                            {
                                "GroupId": "sg-1234567asdfg",
                                "UserId": "111111111111"
                            }
                        ]
                    },
                    {
                        "FromPort": 443,
                        "IpProtocol": "tcp",
                        "IpRanges": [],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 443,
                        "UserIdGroupPairs": [
                            {
                                "GroupId": "sg-1234567asdfg",
                                "UserId": "111111111111"
                            }
                        ]
                    }
                ],
                "Tags": [
                    {
                        "Key": "ComplianceStatus",
                        "Value": "Green"
                    },
                    {
                        "Key": "CustodianRule",
                        "Value": "ecc-aws-226-eks_clusters_security_group_traffic_restricted"
                    }
                ],
                "VpcId": "vpc-12345asdfg"
            }
        ],
        "ResponseMetadata": {}
    }
}
