tests/ecc-aws-226-eks_clusters_security_group_traffic_restricted/placebo-green/eks.DescribeCluster_1.json
{
    "status_code": 200,
    "data": {
        "ResponseMetadata": {},
        "cluster": {
            "name": "226_eks_cluster_green",
            "arn": "arn:aws:eks:us-east-1:111111111111:cluster/226_eks_cluster_green",
            "createdAt": {
                "__class__": "datetime",
                "year": 2021,
                "month": 12,
                "day": 2,
                "hour": 11,
                "minute": 9,
                "second": 2,
                "microsecond": 159000
            },
            "version": "1.21",
            "endpoint": "https://58CCB58FBBBB4B0F2A5EE8AB4EC93316.gr7.us-east-1.eks.amazonaws.com",
            "roleArn": "arn:aws:iam::111111111111:role/eks-373-cluster-green",
            "resourcesVpcConfig": {
                "subnetIds": [
                    "subnet-07683bbdfcf893211",
                    "subnet-0eb433159fb6f1181"
                ],
                "securityGroupIds": [
                    "sg-1234567asdfg"
                ],
                "clusterSecurityGroupId": "sg-1234567asdfg",
                "vpcId": "vpc-06040e942854784d7",
                "endpointPublicAccess": true,
                "endpointPrivateAccess": false,
                "publicAccessCidrs": [
                    "0.0.0.0/0"
                ]
            },
            "kubernetesNetworkConfig": {
                "serviceIpv4Cidr": "172.20.0.0/16"
            },
            "logging": {
                "clusterLogging": [
                    {
                        "types": [
                            "api",
                            "audit",
                            "authenticator",
                            "controllerManager",
                            "scheduler"
                        ],
                        "enabled": false
                    }
                ]
            },
            "identity": {
                "oidc": {
                    "issuer": "https://oidc.eks.us-east-1.amazonaws.com/id/58CCB58FBBBB4B0F2A5EE8AB4EC93316"
                }
            },
            "status": "ACTIVE",
            "certificateAuthority": {
                "data": "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM1ekNDQWMrZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJeE1USXdNakE1TVRVek5Gb1hEVE14TVRFek1EQTVNVFV6TkZvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTHRjCkczU0FzOUNUWVJLQkFSdjMxYWJoaG1CbmZCNlB1Y1JxUzlGeDJMbk9mUVVHa0Z2OUcxRCtBTm5teVpTN3JFbXAKY1FDaGFQZXRMczVIRi92MGh1R2hWUWExM3ZQOThTYk5wVzJiTGZVSm96cnh2dzEzVGZTd1RMVEZJQ3VLSHNVRAp5UDB [...]
            },
            "platformVersion": "eks.3",
            "tags": {
                "CustodianRule": "ecc-aws-226-eks_clusters_security_group_traffic_restricted",
                "ComplianceStatus": "Green"
            }
        }
    }
}
